--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,13 @@ constructs = ">=10.0.0,<11.0.0"
 pepperize-cdk-organizations = "^0.7.680"
 
 [tool.poetry.group.dev.dependencies]
-aws-lambda-powertools = {extras = ["all"], version = "^2.16.2"}
-boto3 = "^1.26.153"
 poethepoet = "^0.20.0"
+black = "^23.9.1"
 pytest = "^7.3.2"
 pytest-mock = "^3.11.1"
 coverage = "^7.2.7"
 moto = "^4.1.11"
+boto3 = "^1.26.153"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
@@ -33,9 +33,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poe.tasks]
 test-unit = ["_test_unit", "_coverage_html"]
-test-unit-cdk = ["_test_unit_cdk", "_coverage_html"]
+black-format = "black ."
+black-check = "black . --check --diff -v"
 _test_unit = "coverage run -m pytest tests/unit"
-_test_unit_cdk = "coverage run -m pytest tests/unit/cdk"
 _coverage_html = "coverage html"
 
 [tool.coverage.run]
