--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,13 +31,16 @@ jobs:
       - name: Check code formatting
         run: poetry run poe black-check
 
-  test:
+  tests:
     name: Run tests
     needs: code-quality
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
@@ -147,7 +150,9 @@ jobs:
   cdk-deploy:
     name: Deploy CDK
     runs-on: ubuntu-latest
-    needs: iac-checkov
+    needs:
+      - iac-checkov
+      - tests
     if: github.ref == 'refs/heads/main'
     permissions:
       id-token: write  # This is required for requesting the JWT
