--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,9 @@ jobs:
           virtualenvs-in-project: true
           installer-parallel: true
 
+      - name: Install Poetry dependencies
+        run: poetry install --no-interaction
+
       - name: Run tests
         run: poetry run poe test-unit
 
