--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,8 +60,8 @@ jobs:
           name: code-coverage-report
           path: htmlcov
 
-  cdk-synth:
-    name: CDK Synth
+  cdk-synth-diff:
+    name: CDK Synth & Diff
     runs-on: ubuntu-latest
     needs: code-quality
     permissions:
@@ -104,7 +104,7 @@ jobs:
         run: |
           aws sts get-caller-identity
 
-      - name: Synth CDK to CloudFormation Template
+      - name: CDK Synth
         run: |
           source .venv/bin/activate
           cdk synth
@@ -126,7 +126,7 @@ jobs:
   iac-checkov:
     name: IaC Checkov Validations
     runs-on: ubuntu-latest
-    needs: cdk-synth
+    needs: cdk-synth-diff
     steps:
       - uses: actions/checkout@v3
 
